[package]
name = "oc2devices"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "*", features = ["derive"] } # default-features = false # miniserde / microserde even ?
serde_json = "*"

arrayvec = "*"
stack-buffer = "*"

uuid = { version = "*", features = ["serde"] }

epoll-rs = "*" # cause mio is too cross platform and epoll is too libc like
termios = "*" # nice